force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/wkdw__EmployeeWorkExperience__c.object-meta.xml
<CustomObject>
    <description>Custom object to add, edit, and view work experience of an employee.</description>
    <label>Portfolio Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>