force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__CompletionDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>