force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__Description__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Description__c</fullName>
    <inlineHelpText>Describe your experience and highlight your accomplishments.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>