force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__IsOwner__c.field-meta.xml
<CustomField>
    <fullName>wkdw__IsOwner__c</fullName>
    <formula>$User.Id=OwnerId</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>