force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__Ongoing__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Ongoing__c</fullName>
    <formula>ISBLANK(wkdw__CompletionDate__c)</formula>
    <label>Ongoing</label>
    <type>Checkbox</type>
</CustomField>