force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__Role__c.field-meta.xml
<CustomField>
    <fullName>wkdw__Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>