force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__StartDate__c.field-meta.xml
<CustomField>
    <fullName>wkdw__StartDate__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>