force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/fields/wkdw__URLs__c.field-meta.xml
<CustomField>
    <fullName>wkdw__URLs__c</fullName>
    <inlineHelpText>Use line breaks to separate the URLs</inlineHelpText>
    <label>Related URLs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>