force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/validationRules/wkdw__URLs.validationRule-meta.xml
<ValidationRule>
    <fullName>wkdw__URLs</fullName>
    <active>true</active>
    <description>Validates the format of the URL.</description>
    <errorConditionFormula>IF(LEN(TRIM(wkdw__URLs__c)) &gt; 0, NOT(REGEX( wkdw__URLs__c , &quot;^((([a-zA-Z]+:)?\\/\\/.*)\\r?\\n?)*$&quot;)), false)</errorConditionFormula>
    <errorDisplayField>wkdw__URLs__c</errorDisplayField>
    <errorMessage>Enter a URL that starts with a valid protocol such as https:// or file:///.</errorMessage>
</ValidationRule>