force-app/main/default/objects/wkdw__EmployeeWorkExperience__c/listViews/wkdw__All.listView-meta.xml
<ListView>
    <fullName>wkdw__All</fullName>
    <columns>NAME</columns>
    <columns>wkdw__Description__c</columns>
    <columns>wkdw__StartDate__c</columns>
    <columns>wkdw__CompletionDate__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>